manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-bedrock-svc
spec:
  selector:
    app: minecraft-bedrock
  ports:
    - protocol: UDP
      port: 19132
      targetPort: 19132
