manifests/istio-gateway-minecraft.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minecraft-tcp-gateway
  namespace: istio-tenant-gateway
spec:
  selector:
    app: tenant-ingressgateway
  servers:
    - port:
        number: 25565
        name: tcp-minecraft
        protocol: TCP
      hosts:
        - "*"
